now_compiles er

--- a/Main.tex
+++ b/Main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%
 % Change year here
-\def\currentcohort{2015 / 2016}
+\def\currentcohort{2016 / 2017}
 %%%%%%%%%%%%
 
 
@@ -160,7 +160,7 @@ Unported License (the ``License''). You may not use this file except in complian
 
 %\input{./Chapters/C3_People.tex}
 
-\input{./Chapters/C4_Facilities.tex}
+%\input{./Chapters/C4_Facilities.tex}
 
 \input{./Chapters/C5_MCRtasks.tex}
 
