--- a/Main.tex
+++ b/Main.tex
@@ -158,9 +158,9 @@ Unported License (the ``License''). You may not use this file except in complian
 
 \input{./Chapters/C2_College.tex}
 
-%\input{./Chapters/C3_People.tex}
+\input{./Chapters/C3_People.tex}
 
-%\input{./Chapters/C4_Facilities.tex}
+\input{./Chapters/C4_Facilities.tex}
 
 \input{./Chapters/C5_MCRtasks.tex}
 
