ER updates martincasper

--- a/Main.tex
+++ b/Main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%
 % Change year here
-\def\currentcohort{2015 / 2016}
+\def\currentcohort{2016 / 2017}
 %%%%%%%%%%%%
 
 
@@ -158,7 +158,7 @@ Unported License (the ``License''). You may not use this file except in complian
 
 \input{./Chapters/C2_College.tex}
 
-%\input{./Chapters/C3_People.tex}
+\input{./Chapters/C3_People.tex}
 
 \input{./Chapters/C4_Facilities.tex}
 
