--- a/Main.tex
+++ b/Main.tex
@@ -29,6 +29,7 @@
 \usepackage{caption} %captionof command
 \usepackage{wrapfig} %text and picture ide by side
 \usepackage{tabularx}
+\usepackage{grffile}
 
 \addto\captionsenglish{\renewcommand{\figurename}{Fig.}} %change label for figures
 \addto\captionsenglish{\renewcommand{\listfigurename}{\biolinum \Large
